--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-numpy
-scipy
-matplotlib
+streamlit
 pandas
+matplotlib
+numpy
+Pillow
 scikit-learn
 joblib
-fastapi
-uvicorn
-streamlit
-keras
+tensorflow-cpu==2.16.1
+keras==3.3.3
